fixed visibility of gift card section

--- a/sass/components/content/_gift-card.scss
+++ b/sass/components/content/_gift-card.scss
@@ -28,6 +28,7 @@
   z-index: 102;
   width: 100%;
   height: 100%;
+  backdrop-filter: blur(5px) brightness(75%);
 }
 
 .giftcard-overlay .giftcard-title {
